ACT-9, ACT-64: streamlined demosetup giving tomcat more memory and added opening of browser